data/derived/comb/progs/unify/prog8341.ml.out
Characters 210-211:
  | Average(v, w) -> (eval (v,x,y) +. eval (w,x,y))/.2
                                                     ^
Error: This expression has type int but an expression was expected of type
         float
